# first_sdl_project

./: CMakeLists.txt  README.md
headers/: AllHeaders.h  Circle.h  CollisionDetection.h  DeltaTime.h  LCamera.h  LDot.h  LParticle.h  LTexture.h  LTile.h  LTimer.h  LWindow.h  collisionDetection.h  getDistance.h  global.h
src/: audioRecording.cpp  close.cpp  collisionDetection.cpp  default.cpp  eventHandler.cpp  global.cpp  init.cpp  loadMedia.cpp  main.cpp  readWriteFile.cpp  render.cpp  textInput.cpp  windowEvents.cpp
